<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/header"
            android:layout_below="@id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dip">
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/header"
            android:padding="10dip">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_date"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_chw_number"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chw_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnFindCHW"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ea4c88"
                android:text="@string/btn_chw_search"
                android:textColor="@color/white" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_name"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chw_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_progress"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chw_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_challenges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_challenges"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chw_challenges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_way_forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_chw_rpt_way_forward"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                style="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chw_way_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textMultiLine"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_save_record"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@color/btn_save_bg"
                    android:layout_marginEnd="20dp"
                    android:text="@string/btn_save_record"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp">
                </Button>
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    android:text="@string/btn_cancel"
                    android:background="@color/btn_logout_bg"
                    android:layout_marginLeft="20dp">
                </Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/footer"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:paddingTop="0dip">
        </LinearLayout>
    </RelativeLayout>

</ScrollView >